tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__struct_collection__invalid_struct_decl_error.snap
---
source: tests/semantic/global_decl_collection/struct_collection.rs
expression: error
---
[
    ErrorRecord {
        key: ErrorKey {
            kind: InvalidStructStmt,
            payload: Str(
                "state",
            ),
        },
        earliest_phase: GlobalDeclCollection,
        ranges: {
            Range {
                start: 0,
                end: 0,
            },
        },
        severity: Error,
    },
]
